public/stylesheets/style.css
/* colors: 
Dark gray: #2f2d2e
Red: #cf5c36
Light gray: #eee5e9
Medium gray: #7c7c7c
Yellow: #efc88b
Dark blue: #2e4057

font: Inter
 */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
body {
  font: 1rem "Inter", Helvetica, Arial, sans-serif;
  background-color: #eee5e9;
  display: flex;
  justify-content: center;
  letter-spacing: 1px;
  flex-direction: column;
  height: 100%;
}
a {
  color: #00b7ff;
}
h1 {
  color: #2e4057;
  font-size: 2rem;
}
h3 {
  color: #2e4057;
}
p {
  color: #2f2d2e;
  font-size: 1rem;
}
#texttasks {
  font-weight: 100;
}
.textpadding {
  padding-top: 1.5%;
}
.button {
  background-color: #2e4057;
  color:#efc88b;
  text-transform: uppercase;
  padding: 3.5% 0;
  text-decoration: none;
  margin: 3.5%;
  border-radius: 10px;
  width: 200px;
  text-align: center;
  font-weight: bold;
}
.button-container {
  display: flex;
  justify-content: center;
}
.login {
  background-color: #efc88b;
  color:#2f2d2e;
}
.container {
  background-color: #eee5e9;
  border: 5px #2f2d2e solid;
  padding: 5%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  text-align: center;
  margin: 3%;
}
.authpages {
  padding: 5%;
  display: flex;
  justify-content: start;
  align-items: center;
  flex-direction: column;
}
form {
  display: flex;
  flex-direction: column;
}
.inputblock {
  display: flex;
  align-items: center;
}
input {
  border-radius: 5px;
  height: 1.6rem;
  padding: 3%;
  background-color: eee5e9;
  border: none;
}
label {
  color: #2f2d2e;
  font-size: 1.2rem;
  margin: 3%;
}
.smalltext {
  padding: 3%;
  font-size: 0.8rem;
  text-align: center;
}
.loginfix {
  padding: 3% !important;
}
.signuplink {
  color: #2f2d2e;
}
.no-border{
  border: none;
  font-size: 1.1rem;
  color: #2e4057;
  letter-spacing: 1px;
  padding: 5%;
  height: 35px;
}
nav {
  background-color: #cf5c36;
  max-width: 200px;
  flex: 1 1 0;
  padding: 2rem 1rem;
}
ul {
  display: flex;
  padding: 0;
  margin: 0;
  flex-direction: column;

}
nav ul li {
  display: flex;
  list-style: none;
  padding: 0.7rem;
}
.menuitem {
  text-decoration: none;
  text-transform: uppercase;
  font-weight: 600;
  color: #2f2d2e;
}
.tabpage {
  background-color: #eee5e9;
  padding: 5%;
}
.tabtitle{
  display: flex;
  background-color: #7c7c7c;
  justify-content: space-between;
  align-items: center;
  padding: 0 5%;
  color: #2f2d2e;
  padding: 2%;
}
#createtaskbutton {
  background-color: #efc88b;
  color: #2f2d2e;
  text-transform: uppercase;
  padding: 1% 0;
  text-decoration: none;
  margin: 1%;
  border-radius: 10px;
  width: 200px;
  text-align: center;
  font-weight: bold;
}
.outsidepage {
  background-color: #cf5c36;
  height: 100%;
  width: 100%;
  position: absolute;
}
.app {
  display: flex;
  min-height: 100vh;
  width: 100vw;
}
.pagecontent {
  display: flex;
  flex-direction: column;
  width: 100vw;
}


.tabpage > h3 {
  font-size: 2.0rem;
}

.tabpage > p {
  font-size: 1.1rem;
}

.task {
  border-color: #2f2d2e;
  border-width: 3px;
  border-style: solid;
  border-radius: 10px;
  width: 50vw;
  margin-top: 20px;
  margin-bottom: 20px;
  padding-top: 10px;
  padding-bottom: 20px;
  background-color: #eee5e9;
  padding-left: 20px;
}

.task > p {
font-weight: bolder;
}

.task-edit-delete {
  display: flex;
  justify-content: space-between;
  align-items: center;
}


.task-complete {
  display: flex;
  align-items: center;
  margin-top: 10px;
  margin-bottom: 10px;
}

.task-name {
  font-weight: bold;
  font-size: 1.3rem;
  max-width: 300px;
}


.complete-btn {
  background-image: url('/images/square-line-icon.png');
  background-size: cover;
  width: 30px;
  height: 30px;
  border-style: none;
  -webkit-tap-highlight-color: transparent;
}

.edit-delete {
  display: flex;
  gap: 1.5rem;
  align-items: center;
  margin-right: 20px;
  margin-top: 10px;
  margin-bottom: 10px;
}

.edit {
  background-image: url('/images/edit-list.png');
  width: 30px;
  height: 30px;
  background-size: cover;
}

.delete-btn {
  background-image: url('/images/delete.png');
  background-size: cover;
  width: 30px;
  height: 30px;
  border-style: none;
}


form  { 
  display: table;  
}
form > p  { 
  display: table-row;  
  height: 40px;
}

label { 
  display: table-cell; 
  margin: 3% ;
}
input { 
  display: table-cell; 
  width: 300px;
  margin: 3% 0 ;
  height: 35px;
}
.collab-list {
  list-style: none;
}
.viewalllink {
  color: #2e4057;
  font-weight: 600;
}
.dashboard-button-fix {
  padding: 3% !important;
}

@media (max-width: 768px) {
  .button-container {
    flex-wrap: wrap;
  }
  nav {
    position: fixed;
    bottom: 0;
    width: 100vw;
    max-width: 100vh;
    font-size: 10px;
    height: 45px;
    padding-top: 1%;
  }
  nav ul {
    flex-direction: row;
    width: 100vw;
    justify-content: space-evenly;
  }
  .menuitems {
    display: flex;
    flex-direction: row;
  }
  .menuitem {
    display: block;
  }
  .wrapinputs {
    display: flex;
    flex-wrap: wrap
  }

  .task {
    border-color: #2f2d2e;
    border-width: 3px;
    border-style: solid;
    border-radius: 10px;
    width: 90vw;
    margin-top: 20px;
    margin-bottom: 20px;
    padding-top: 10px;
    padding-bottom: 20px;
    background-color: #eee5e9;
    padding-left: 20px;
  }

  #texttasks {
    font-size: 0.8rem;
  }

}

